<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clickable="false"
            android:cursorVisible="false"
            android:digits="0123456789."
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="end"
            android:inputType="numberDecimal|number"
            android:maxLength="9"
            android:text="@string/zero"
            android:textColor="@color/color5"
            android:textSize="68sp"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="3dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector3"
                android:text="@string/c_button"
                android:textAlignment="center"
                android:textColor="@color/color5"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_plus_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector2"
                android:text="@string/plus_minus_button"
                android:textAlignment="center"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector2"
                android:text="@string/division_button"
                android:textAlignment="center"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_backspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector2"
                android:text="@string/backspace_button"
                android:textAlignment="center"
                android:textSize="50sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_number_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector"
                android:text="@string/number_7"
                android:textAlignment="center"
                android:textColor="@color/color5"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_number_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector"
                android:text="@string/number_8"
                android:textAlignment="center"
                android:textColor="@color/color5"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_number_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector"
                android:text="@string/number_9"
                android:textAlignment="center"
                android:textColor="@color/color5"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_multiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector2"
                android:text="@string/multiplication_button"
                android:textAlignment="center"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_number_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector"
                android:text="@string/number_4"
                android:textAlignment="center"
                android:textColor="@color/color5"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_number_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector"
                android:text="@string/number_5"
                android:textAlignment="center"
                android:textColor="@color/color5"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_number_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector"
                android:text="@string/number_6"
                android:textAlignment="center"
                android:textColor="@color/color5"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector2"
                android:text="@string/minus_button"
                android:textAlignment="center"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_number_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector"
                android:text="@string/number_1"
                android:textAlignment="center"
                android:textColor="@color/color5"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_number_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector"
                android:text="@string/number_2"
                android:textAlignment="center"
                android:textColor="@color/color5"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_number_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector"
                android:text="@string/number_3"
                android:textAlignment="center"
                android:textColor="@color/color5"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector2"
                android:text="@string/plus_button"
                android:textAlignment="center"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_number_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector"
                android:text="@string/number_0"
                android:textAlignment="center"
                android:textColor="@color/color5"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector2"
                android:text="@string/period_button"
                android:textAlignment="center"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector3"
                android:text="@string/equals_button"
                android:textAlignment="center"
                android:textColor="@color/color5"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_selector2"
                android:text="@string/percent_button"
                android:textAlignment="center"
                android:textSize="50sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>